# genassist

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md
scripts/: add-license.sh  (+1 more)
services/backend/: .coveragerc  .env.example  .env.test  .gitignore  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
services/backend/app/: app.py
services/backend/app/api/v1/: api.py
services/backend/app/core/: logging.py
services/backend/app/schemas/: document_edit.py  text2speech.py  text2video.py
services/backend/app/services/: document_edit_service.py  gemini_service.py  text2speech_service.py  text2video_service.py
services/backend/app/utils/: dependencies.py
services/backend/demos/: audio_demo.py  demo_live.py  full_audio_demo.py  live_voice_chat.py  live_voice_chat_demo.py  screen_voice_chat.py  simple_audio_demo.py  test_live_service.py
services/backend/scripts/: restart-server.sh
services/backend/src/: app.py  config.py
services/backend/src/api/v1/: api.py
services/backend/src/app/: main.py
services/backend/src/app/core/: config.py  logging.py
services/backend/src/app/models/: __init__.py  document_edit.py  login.py  text2speech.py
services/backend/src/app/schemas/: document_edit.py  gemini_live.py  gemini_live_web.py  text2image.py  text2speech.py  text2video.py
services/backend/src/core/: config.py  logging.py
services/backend/src/models/: document_edit.py  text2speech.py
services/backend/src/schemas/: document_edit.py  text2speech.py  text2video.py
services/backend/src/services/: document_edit_service.py  gemini_service.py  text2speech_service.py  text2video_service.py
services/backend/src/utils/: dependencies.py  exceptions.py  helpers.py
services/backend/tests/: conftest.py  test_main.py  test_websocket_integration_adhoc.py
services/backend/tests/adhoc/: test_websocket_integration_adhoc.py
services/backend/tests/integration/: test_document_edit_api.py  test_text2image_api.py  test_text2speech_api.py  test_text2video_api.py
services/backend/tests/unit/: test_config.py  test_dependencies.py  test_exceptions.py  test_file_processors.py  test_schemas.py  test_services.py
(+152 files in other folders)
