[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "faker>=37.4.0",
    "fastapi>=0.115.12",
    "google-api-core>=2.25.1",
    "google-genai>=1.20.0",
    "google-generativeai==0.8.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mss>=10.0.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
    # "wave>=0.0.2",  # Removed due to MySQL dependency conflict - using standard library
    "ytest>=0.1.4",
]
